[gd_scene load_steps=4 format=3 uid="uid://bhgp5nni0peas"]

[ext_resource type="Script" uid="uid://baa6vwsqdkgv8" path="res://src/ui/Adjuster.gd" id="1_6xfoy"]
[ext_resource type="Script" uid="uid://c6ou7173i57do" path="res://src/ui/DynamicLabel.gd" id="1_uxdlw"]
[ext_resource type="Script" uid="uid://dwy5qfsib3g3m" path="res://src/ui/DynamicButton.gd" id="2_lv83f"]

[node name="Adjuster" type="HBoxContainer"]
theme_override_constants/separation = 0
script = ExtResource("1_6xfoy")

[node name="DownBig" type="Button" parent="."]
layout_mode = 2
text = "--"
script = ExtResource("2_lv83f")

[node name="Down" type="Button" parent="."]
layout_mode = 2
text = "-"
script = ExtResource("2_lv83f")

[node name="DynamicLabel" type="Label" parent="."]
custom_minimum_size = Vector2(48, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_uxdlw")

[node name="Up" type="Button" parent="."]
layout_mode = 2
text = "+"
script = ExtResource("2_lv83f")

[node name="UpBig" type="Button" parent="."]
layout_mode = 2
text = "++"
script = ExtResource("2_lv83f")
